# goldsrc-asset-viewer

./: .gitignore  Cargo.toml  README.md
data/shaders/: shader.wgsl  simple.frag  simple.vert
gsparser/: Cargo.toml
gsparser/examples/: bspaudit.rs  test.rs  wadaudit.rs
gsparser/src/: bsp.rs  lib.rs  mdl.rs  wad3.rs
mdlparser/: Cargo.toml
mdlparser/src/: lib.rs
src/: bsp.rs  bsp_viewer.rs  cli.rs  graphics.rs  hittest.rs  main.rs  mdl_viewer.rs  mouse.rs  numerics.rs  util.rs  wad_viewer.rs
src/export/: bsp.rs  mdl.rs  mod.rs  transform.rs
src/gltf/: animation.rs  bsp.rs  buffer.rs  coordinates.rs  export.rs  material.rs  mdl.rs  mod.rs  node.rs  skin.rs  transform.rs
src/logic/: entity.rs
src/rendering/: bsp.rs  camera.rs  debug.rs  mod.rs  movement.rs  renderer.rs
wad3parser/: Cargo.toml  README.md
wad3parser/examples/: test.rs  wadaudit.rs
wad3parser/src/: lib.rs
