[package]
name = "goldsrc-asset-viewer"
version = "0.1.0"
authors = ["Robert Mikhayelyan <rob.mikh@outlook.com>"]
edition = "2021"
description = "A tool to view assets from GoldSource games."

[dependencies]
gsparser = { path = "gsparser" }
wgpu = "0.17"
winit = "0.27.2"
clap = { version = "4.5.4", features = ["derive"] }
glam = "0.27.0"
rfd = "0.14.1"
image = "0.25.1"
env_logger = "0.11.3"
imgui = "0.11.0"
imgui-winit-support = { version = "0.11.0", default-features = false }
imgui-wgpu = "0.24.0"
pollster = "0.3.0"
id_tree = "1.8.0"
bytemuck = { version="1.16.0", features = [ "derive" ] }
