[package]
name = "goldsrc-asset-viewer"
version = "0.1.0"
authors = ["Robert Mikhayelyan <rob.mikh@outlook.com>"]
edition = "2021"
description = "A tool to view assets from GoldSource games."

[dependencies]
gsparser = { git = "https://github.com/robmikh/gsparser" }
wgpu = "0.20"
winit = "0.29.3"
clap = { version = "4.5.4", features = ["derive"] }
glam = "0.27.0"
rfd = "0.14.1"
image = "0.25.1"
env_logger = "0.11.3"
imgui = "0.12"
imgui-winit-support = { version = "0.12", default-features = false }
#imgui-wgpu = "0.24.0"
imgui-wgpu = { git = "https://github.com/benmkw/imgui-wgpu-rs", branch = "wgpu020" }
pollster = "0.3.0"
id_tree = "1.8.0"
bytemuck = { version="1.16.0", features = [ "derive" ] }
gltf = { git = "https://github.com/robmikh/gltf", rev = "e56c12b486e88294292bde7a335bb763021b2391" }
rectangle-pack = "0.4.2"
